add base repository

--- a/grooming/src/main/resources/application.properties
+++ b/grooming/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/db_grooming
+spring.datasource.username=root
+spring.datasource.password=root
+#hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=true
