--- a/grooming/src/main/resources/application.properties
+++ b/grooming/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
+spring.sql.init.schema-locations=classpath:schema.sql
