solve problem with start project need add role relations for client and employee

--- a/grooming/src/main/resources/application.properties
+++ b/grooming/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_grooming
-spring.datasource.username=root
-spring.datasource.password=root
+database=mysql
+spring.profiles.active=mysql
+spring.sql.init.schema-locations=classpath*:db/mysql/${database}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 #hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.main.allow-circular-references=true
-spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.open-in-view=true
