--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/grooming_salon}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASS:root}
+spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
+spring.datasource.username=root
+spring.datasource.password=root
 # SQL is written to be idempotent so this is safe
-spring.sql.init.mode=always
+spring.sql.init.mode=embedded
