--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,38 @@
-database=mysql
-spring.profiles.active=mysql
-spring.sql.init.schema-locations=classpath*:db/mysql/${database}/schema.sql
-spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+#database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Database initialization using SQL scripts
+spring.sql.init.mode=embedded
+spring.sql.init.schema-locations=classpath:db/mysql/init.sql
+spring.sql.init.data-locations=classpath:db/mysql/data.sql
+
 #hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Web
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+# Internationalization
+spring.messages.basename=messages/messages
+
+# Actuator / Management
+management.contextPath=/manage
+
+# Logging
+logging.level.org.springframework=INFO
+
+# Active Spring profiles
+spring.profiles.active=develop
+
+spring.jackson.serialization.write_dates_as_timestamps=false
+
+server.port=8081
