--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=embedded
+spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/mysql/init.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
