--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
 spring.datasource.username=root
 spring.datasource.password=root
 
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 # Database initialization using SQL scripts
-spring.sql.init.mode=always
+spring.sql.init.mode=embedded
 spring.sql.init.schema-locations=classpath:db/mysql/init.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
@@ -13,9 +17,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view=true
 
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Web
 spring.mvc.view.prefix=/WEB-INF/jsp/
