--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=embedded
+spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/mysql/init.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
