--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,20 @@
+server.port=8081
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
 spring.datasource.username=root
 spring.datasource.password=root
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:db/mysql/init.sql
+spring.sql.init.mode=never
+#spring.sql.init.schema-locations=classpath:db/mysql/init.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
 #hibernate
@@ -36,4 +41,3 @@ spring.profiles.active=develop
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-server.port=8081
