fix relations bugs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:db/mysql/init.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
