--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -41,3 +41,10 @@ spring.profiles.active=develop
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=groomingemail@gmail.com
+spring.mail.password=**** **** **** ****
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
