--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+#port api
 server.port=8081
+
+# Logging
+logging.level.org.springframework=ERROR
+
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
 spring.datasource.username=root
@@ -8,13 +13,13 @@ spring.datasource.password=root
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=never
-#spring.sql.init.schema-locations=classpath:db/mysql/init.sql
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/mysql/init_hbt.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
 #hibernate
@@ -33,8 +38,7 @@ spring.messages.basename=messages/messages
 # Actuator / Management
 management.contextPath=/manage
 
-# Logging
-logging.level.org.springframework=INFO
+
 
 # Active Spring profiles
 spring.profiles.active=develop
