--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.datasource.password=root
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=never
-spring.sql.init.schema-locations=classpath:db/mysql/init_hbt.sql
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/mysql/schema_hbt.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
 #hibernate
@@ -34,9 +34,6 @@ spring.mvc.view.suffix=.jsp
 
 # Internationalization
 spring.messages.basename=messages/messages
-
-# Actuator / Management
-management.contextPath=/manage
 
 # Active Spring profiles
 spring.profiles.active=develop
