--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8081
 
 # Logging
-logging.level.org.springframework=TRACE
-debug=true
+#logging.level.org.springframework=TRACE
+#debug=true
 
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
@@ -14,12 +14,12 @@ spring.datasource.password=root
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:db/mysql/schema_hbt.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
