--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,6 +27,9 @@ spring.sql.init.data-locations=classpath:db/mysql/data.sql
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view=true
 
+#Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-grooming.html
 
 # Web
 spring.mvc.view.prefix=/WEB-INF/jsp/
