--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8081
 
 # Logging
-#logging.level.org.springframework=TRACE
-#debug=true
+logging.level.org.springframework=TRACE
+debug=true
 
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
