--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #port api
 server.port=8081
 
-# Logging
-logging.level.org.springframework=TRACE
-debug=true
+## Logging
+#logging.level.org.springframework=TRACE
+#debug=true
 
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
@@ -36,6 +36,10 @@ spring.messages.basename=messages/messages
 
 # Active Spring profiles
 spring.profiles.active=develop
+
+#Exception handler
+server.error.include-message=on-param
+server.error.include-exception=true
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
