--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,7 +19,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Database initialization using SQL scripts
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:db/mysql/schema_hbt.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
@@ -46,8 +47,8 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 # mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=groomingemail@gmail.com
-spring.mail.password=**** **** **** ****
+spring.mail.username=begroomedpets@gmail.com
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 
