configure Environment value in app.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port=8081
 
 ## Logging
-#logging.level.org.springframework=TRACE
-#debug=true
+logging.level.org.springframework=TRACE
+debug=true
 
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 
 # JPA
 spring.jpa.database=MYSQL
