configure actuator for checking health of app in docker container

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -57,3 +57,7 @@ send.email.after.appointment.creation=false
 #JWT
 application.security.jwt.secret-key=${JWT_SECRET_KEY}
 application.security.jwt.life-time=600000
+
+#Spring actuator
+spring.security.user.name= admin@mail.com
+spring.security.user.password= password1
