--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -102,6 +102,18 @@
             <artifactId>swagger-annotations-jakarta</artifactId>
             <version>2.2.15</version>
         </dependency>
+<!--        Metric for docker-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
