--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,9 +1,9 @@
 #port api
-server.port=8081
-
+server.port=8080
+#Qwerty123
 ## Logging
 logging.level.org.springframework=INFO
-#debug=true
+debug=true
 
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
