--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework=INFO
 #debug=true
 
 #database connection
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${PORT_MYSQL}/${DATABASE_NAME}
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${PORT_MYSQL}/${DATABASE_NAME}
 spring.datasource.username=${MYSQL_USERNAME:root}
 spring.datasource.password=${MYSQL_PASSWORD:root}
 
