--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,59 +4,41 @@ server.port=8080
 ## Logging
 logging.level.org.springframework=INFO
 #debug=true
-
 #database connection
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${PORT_MYSQL}/${DATABASE_NAME}
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD:root}
-
+spring.datasource.url=jdbc:postgresql://app-26a89a6a-64bf-4a79-8ece-a8f4653a92b5-do-user-15738375-0.c.db.ondigitalocean.com:25060/groomingdb
+spring.datasource.username=groomingdb
+spring.datasource.password=AVNS_TRU4SBUwhc4NhhRzHI-
 # JPA
-spring.jpa.database=MYSQL
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
 
 # Database initialization using SQL scripts
 spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:db/mysql/schema_hbt.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
 
-#hibernate
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.open-in-view=true
-
 # Web
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
 # Internationalization
+
 spring.messages.basename=messages/messages
-
 # Active Spring profiles
-spring.profiles.active=develop
 
+spring.profiles.active=production
 #Exception handler
+
 server.error.include-message=on-param
 server.error.include-exception=true
-
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-# mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=begroomedpets@gmail.com
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true;
-spring.mail.properties.mail.smtp.starttls.enable=true
-# To enable/disable sending emails after creating an Appointment
-send.email.after.appointment.creation=false
 
 #JWT
 application.security.jwt.secret-key=${JWT_SECRET_KEY}
 application.security.jwt.life-time=600000
-
 #Spring actuator
-spring.security.user.name= admin@mail.com
-spring.security.user.password= password1
+spring.security.user.name=admin@mail.com
+spring.security.user.password=password1
