--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,23 +19,29 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:db/mysql/schema_hbt.sql
 spring.sql.init.data-locations=classpath:db/mysql/data.sql
-
+#hibernate
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=true
 # Web
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 # Internationalization
-
 spring.messages.basename=messages/messages
 # Active Spring profiles
-
-spring.profiles.active=production
+spring.profiles.active=develop
 #Exception handler
-
 server.error.include-message=on-param
 server.error.include-exception=true
 spring.jackson.serialization.write_dates_as_timestamps=false
-
-
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=begroomedpets@gmail.com
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+# To enable/disable sending emails after creating an Appointment
+send.email.after.appointment.creation=false
 #JWT
 application.security.jwt.secret-key=${JWT_SECRET_KEY}
 application.security.jwt.life-time=600000
