--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8080
 logging.level.org.springframework=INFO
 #debug=true
 #database connection
-spring.datasource.url=jdbc:postgresql://app-26a89a6a-64bf-4a79-8ece-a8f4653a92b5-do-user-15738375-0.c.db.ondigitalocean.com:25060/groomingdb
-spring.datasource.username=groomingdb
-spring.datasource.password=AVNS_TRU4SBUwhc4NhhRzHI-
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
@@ -28,7 +28,7 @@ spring.mvc.view.suffix=.jsp
 # Internationalization
 spring.messages.basename=messages/messages
 # Active Spring profiles
-spring.profiles.active=develop
+spring.profiles.active=production
 #Exception handler
 server.error.include-message=on-param
 server.error.include-exception=true
