--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,3 +3,16 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 
 spring.jpa.hibernate.ddl-auto=update
+
+application.security.jwt.secret-key=${JWT_SECRET_KEY}
+application.security.jwt.life-time=600000
+
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=begroomedpets@gmail.com
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+# To enable/disable sending emails after creating an Appointment
+send.email.after.appointment.creation=false
