--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>grooming</description>
     <properties>
         <java.version>17</java.version>
-        <start.class>com/ait/grooming/GroomingApplication</start.class>
+<!--        <start.class>com/ait/grooming/GroomingApplication</start.class>-->
     </properties>
     <dependencies>
         <dependency>
@@ -143,14 +143,14 @@
 
     <build>
 
-        <outputDirectory>${project.build.directory}/dependency</outputDirectory>
+<!--        <outputDirectory>${project.build.directory}/dependency</outputDirectory>-->
 
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>${start.class}</mainClass>
+<!--                    <mainClass>${start.class}</mainClass>-->
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
