change build for dockerfile

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # mail
 spring.mail.host=smtp.gmail.com
@@ -13,3 +13,5 @@ spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 # To enable/disable sending emails after creating an Appointment
 send.email.after.appointment.creation=false
+
+application.security.jwt.secret-key=${JWT_SECRET_KEY}
