--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,15 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
 
-spring.jpa.hibernate.ddl-auto=update
-
-# mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=begroomedpets@gmail.com
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true;
-spring.mail.properties.mail.smtp.starttls.enable=true
-# To enable/disable sending emails after creating an Appointment
-send.email.after.appointment.creation=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
