--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     </parent>
     <groupId>com.ait</groupId>
     <artifactId>backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.14-SNAPSHOT</version>
     <name>grooming</name>
     <description>grooming</description>
     <properties>
         <java.version>17</java.version>
-        <start.class>src/main/java/com/ait/grooming/GroomingApplication.java</start.class>
+        <!--        <start.class>src/main/java/com/ait/grooming/GroomingApplication.java</start.class>-->
     </properties>
     <dependencies>
         <dependency>
@@ -142,14 +142,14 @@
 
     <build>
 
-        <outputDirectory>${project.build.directory}/dependency</outputDirectory>
+        <!--        <outputDirectory>${project.build.directory}/dependency</outputDirectory>-->
 
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>${start.class}</mainClass>
+                    <!--                    <mainClass>${start.class}</mainClass>-->
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
