clean up project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,15 @@ version: '3.7'
 services:
 
   grooming-app:
-    image: grooming-app:1.0.0
+#    image: grooming-app:1.0.0
     ports:
-      - "8081:8080"
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
+      - "8080:8080"
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       mysqldb:
         condition: service_healthy
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysqldb:3306/grooming_salon
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
-      - APPLICATION_SECURITY_JWT_SECRET-KEY=${JWT_SECRET_KEY}
-      - SPRING_MAIL_PASSWORD=${MAIL_PASSWORD}
     networks:
       - springboot-mysql-network
   mysqldb:
@@ -40,5 +34,3 @@ volumes:
 networks:
   springboot-mysql-network:
     name: springboot-mysql-network
-
-#    mysql -h mysqldb.cx42cwc82tcs.eu-central-1.rds.amazonaws.com -P 3306 -u root -p
