--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.ait</groupId>
     <artifactId>backend</artifactId>
-    <version>1.0.14-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>grooming</name>
     <description>grooming</description>
     <properties>
@@ -137,6 +137,11 @@
             <artifactId>spring-security-test</artifactId>
             <version>6.2.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.2</version>
         </dependency>
     </dependencies>
 
