clean up project

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+application.security.jwt.secret-key=${JWT_SECRET_KEY}
+application.security.jwt.life-time=600000000
+send.email.after.appointment.creation=false
