finish clean up

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,6 +4,8 @@ server.port=8080
 ## Logging
 logging.level.org.springframework=INFO
 debug=true
+# Active Spring profiles
+spring.profiles.active=develop
 
 #database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/grooming_salon
